--- a/src/QSTit.qrc
+++ b/src/QSTit.qrc
@@ -26,6 +26,7 @@
     <file>Help/QSTit_Help_En.htm</file>
     <file>Imag/QSTit_acce.png</file>
     <file>Imag/QSTit_base.png</file>
+    <file>Imag/QSTit_icon.png</file>
     <file>Imag/QSTit_butN.png</file>
     <file>Imag/QSTit_butY.png</file>
     <file>Imag/QSTit_canc.png</file>
