--- a/src/QSTit.qrc
+++ b/src/QSTit.qrc
@@ -91,7 +91,7 @@
     <file>Imag/QSTit_scro_left.png</file>
     <file>Imag/QSTit_scro_righ.png</file>
     <file>Imag/QSTit_scro_upup.png</file>
-    <file>Imag/qstit.svg</file>
+    <file>Imag/qstit.png</file>
 </qresource>
 </RCC>
 <!--
