--- a/src/QSTit.qrc
+++ b/src/QSTit.qrc
@@ -1,24 +1,26 @@
 <!--
-    ═══════════════════════════════════════════════════════════════════════════
-    This file is part of QSTit.
-    Feedback, comments and questions are welcome:
-    subtitles@nova-cinema.org
+    This file is part of Qstit
+   ═════════════════════════════════════════════════════════════════
+    Qstit is developed by Nova Cinema, Brussels - http://www.nova-cinema.org
+    Feedback, comments and questions are welcome: subtitles@nova-cinema.org
+   ═════════════════════════════════════════════════════════════════
+    Programming: Georges Piedboeuf-Boen - georges.pi.bo@gmail.com
+   ═════════════════════════════════════════════════════════════════
+    Icons credit: Nova & Axialis Team - http://www.axialis.com/free/icons
+   ═════════════════════════════════════════════════════════════════
+    Qstit is a free software: you can redistribute it and/or modify it under the terms
+    of the GNU General Public License as published by the Free Software Foundation,
+    either version 3 of the License, or (at your option) any later version.
+    If you do, we'd like to hear about it.
 
-    QSTit is a free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version. If you do, we'd like to hear about it.
+    Qstit is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+    without even the implied warranty of MERCHANTABILITY or
+    FITNESS FOR A PARTICULAR PURPOSE.
+    See the GNU General Public License for more details.
 
-    QSTit is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with QSTit. If not, see <http://www.gnu.org/licenses/>
-    ═══════════════════════════════════════════════════════════════════════════
-    Free Icons by Axialis Software - Axialis Team <http://www.axialis.com>
-    ═══════════════════════════════════════════════════════════════════════════
+    You should have received a copy of the GNU General Public License along with Qstit.
+    If not, see http://www.gnu.org/licenses
+   ═════════════════════════════════════════════════════════════════
 -->
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
@@ -80,13 +82,10 @@
     <file>Imag/QSTit_vert_bott.png</file>
     <file>Imag/QSTit_vert_cent.png</file>
     <file>Imag/QSTit_vert_topy.png</file>
-    <file>Imag/QSTit_xcen.png</file>
     <file>Imag/QSTit_xdow.png</file>
     <file>Imag/QSTit_xlef.png</file>
     <file>Imag/QSTit_xrig.png</file>
     <file>Imag/QSTit_xupx.png</file>
-    <file>Imag/QSTit_grid_clea.png</file>
-    <file>Imag/QSTit_grid_dark.png</file>
     <file>Imag/QSTit_scro_down.png</file>
     <file>Imag/QSTit_scro_left.png</file>
     <file>Imag/QSTit_scro_righ.png</file>
@@ -94,11 +93,3 @@
     <file>Imag/qstit.png</file>
 </qresource>
 </RCC>
-<!--
-    ════════════════════════════════════════════════════════════════════════════════
-    Code analysis/programming:  Georges Piedboeuf-Boen  georges.pi.bo@gmail.com
-    Functional analysis:        Laurent Tenzer          lt@nova-cinema.org
-    Project origin:             Cinéma Nova             http://www.nova-cinema.org
-    Made in Brussels            Belgium                 http://www.brussels.be
-    ════════════════════════════════════════════════════════════════════════════════
--->
